--- a/frontend/src/components/Navbar.css
+++ b/frontend/src/components/Navbar.css
@@ -35,7 +35,7 @@
 
 .nav-pink::before,
 .nav-pink::after {
-  background-color: #ff69b4;
+  background-color: #4b12ac;
 }
 
 .nav-blue::before,
@@ -45,7 +45,7 @@
 
 .nav-yellow::before,
 .nav-yellow::after {
-  background-color: #fbc02d;
+  background-color: #2208e5;
 }
 
 .nav-green::before,
