poprawki na zajeciach

--- a/frontend/src/components/Navbar.css
+++ b/frontend/src/components/Navbar.css
@@ -35,12 +35,12 @@
 
 .nav-pink::before,
 .nav-pink::after {
-  background-color: #4b12ac;
+  background-color: #e7ee2c;
 }
 
 .nav-blue::before,
 .nav-blue::after {
-  background-color: #3f51b5;
+  background-color: #ce1010;
 }
 
 .nav-yellow::before,
